--- a/package.JSON
+++ b/package.JSON
@@ -3,7 +3,8 @@
    "botbuilder": "^3.8.3",
    "restify": "^4.1.1",
    "https": "^1.0.0" ,
-   "dotenv-extended": "^1.0.4"  
+   "dotenv-extended": "^1.0.4",
+   "botbuilder-cognitiveservices": "^1.0.1"
    }
 
 }
